[package]
name = "http-basic-auth"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "HTTP Basic Authentication support according to IETF RFC 7617"
repository = "https://github.com/toshokan/http-basic-auth"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.12"
